# AoC21

./: CMakeLists.txt  LICENSE  TimeMeasure.h  lib.cpp  lib.h  main.cpp
D1/: D1.cpp  D1.h
D2/: D2.cpp  D2.h
D3/: D3.cpp  D3.h
D4/: D4.cpp  D4.h
D5/: D5.cpp  D5.h
D6/: D6.cpp  D6.h
D7/: D7.cpp  D7.h
D8/: D8.cpp  D8.h
lib/: fgLib.h
