cmake_minimum_required(VERSION 3.18)
project(AoC21)

set(CMAKE_CXX_STANDARD 17)
include_directories(./)
set(SOURCES ${SOURCES} main.cpp lib/fgLib.h lib.h lib.cpp)
set(SOURCES ${SOURCES} D1/D1.cpp)
set(SOURCES ${SOURCES} D2/D2.h D2/D2.cpp)
set(SOURCES ${SOURCES} D3/D3.cpp D3/D3.h)
set(SOURCES ${SOURCES} D4/D4.cpp D4/D4.h)
set(SOURCES ${SOURCES} D5/D5.cpp D5/D5.h)
set(SOURCES ${SOURCES} D6/D6.cpp D6/D6.h)
set(SOURCES ${SOURCES} D7/D7.cpp D7/D7.h)
set(SOURCES ${SOURCES} D8/D8.cpp D8/D8.h)
#set(SOURCES ${SOURCES} D9/D9.cpp D9/D9.h)
#set(SOURCES ${SOURCES} )
add_executable(AoC21 ${SOURCES})

target_link_libraries(AoC21 pthread)